objects/FSL__Crew_Management_User_Settings__c.object
<CustomObject>
    <fields>
        <fullName>FSL__GanttHorizon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Days on gantt</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__SchedulingPolicy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduling Policy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__SkillsLogicOperator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Skills Logic Operator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Crew Management User Settings</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Crew Management User Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Management User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>